src/objects/pse__Time_Date__c.object
<CustomObject>
    <customHelpPage>pse__TimeDateHelp</customHelpPage>
    <description>Records hours worked on a single date within the date range of a timecard. Timecards have a master-detail relationship with time dates.</description>
    <fields>
        <fullName>pse__Date__c</fullName>
        <description>The date for which the parent Timecard contains the specified number of hours.</description>
        <inlineHelpText>The date for which the parent Timecard contains the specified number of hours.</inlineHelpText>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Day_Of_Week__c</fullName>
        <description>Displays the label corresponding to the day of week for the Date field value.</description>
        <formula>CASE(MOD((pse__Date__c-DATE(2000,1,2)),7),0,$Label.pse__common_label_sunday,1,$Label.pse__common_label_monday,2,$Label.pse__common_label_tuesday,3,$Label.pse__common_label_wednesday,4,$Label.pse__common_label_thursday,5,$Label.pse__common_label_friday,$Label.pse__common_label_saturday)</formula>
        <inlineHelpText>Displays the label corresponding to the day of week for the Date field value.</inlineHelpText>
        <label>Day Of Week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Hours__c</fullName>
        <description>The number of hours that the parent Timecard contains for the specified date.</description>
        <inlineHelpText>The number of hours that the parent Timecard contains for the specified date.</inlineHelpText>
        <label>Hours</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Timecard__c</fullName>
        <description>The parent Timecard for which this Time Date record represents a single hour value for one of its seven contained dates.</description>
        <inlineHelpText>The parent Timecard for which this Time Date record represents a single hour value for one of its seven contained dates.</inlineHelpText>
        <label>Timecard</label>
        <referenceTo>pse__Timecard_Header__c</referenceTo>
        <relationshipLabel>Time Dates</relationshipLabel>
        <relationshipName>Time_Dates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Time Date</label>
    <nameField>
        <displayFormat>TD-{0}</displayFormat>
        <label>Time Date Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Dates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>